--- a/ChangeColor/style.css
+++ b/ChangeColor/style.css
@@ -25,7 +25,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 30px;
+    gap: 50px;
 }
 
 .buttons{
@@ -93,7 +93,7 @@ body{
 }
 
 .orange{
-    background-color: orange;
+    background-color: rgb(255, 102, 0);
     border: 3px solid black;
     transition: 0.3s;
 }
